Added bedrock samples

--- a/Samples/Samples.Bedrock/Samples.Bedrock.csproj
+++ b/Samples/Samples.Bedrock/Samples.Bedrock.csproj
@@ -7,6 +7,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="AWSSDK.Bedrock" Version="3.7.301.7" />
+		<PackageReference Include="AWSSDK.BedrockRuntime" Version="3.7.301.7" />
+		<PackageReference Include="CsvHelper" Version="30.0.1" />
+		<PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.0.0-beta6" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Npgsql" Version="8.0.1" />
+		<PackageReference Include="Pgvector" Version="0.2.0" />
+		<PackageReference Include="ShellProgressBar" Version="5.2.0" />
+	</ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Samples.Common\Samples.Common.csproj" />
   </ItemGroup>
