--- a/Samples/Samples.Common/appsettings.json
+++ b/Samples/Samples.Common/appsettings.json
@@ -1,3 +1,3 @@
 {
-    "ConnectionStrings": { "KBStoreDB":"Server=###Enter your server URL or IP here###;Port=5432;Database=KBStore;User Id=###Enter your username here###;Password=###Enter DB password here###;"}
+  "ConnectionStrings": { "KBStoreDB": "Server=###Enter your server URL or IP here###;Port=5432;Database=kbstore;User Id=###Enter your username here###;Password=###Enter DB password here###;" }
 }
