changed to suit the new format

--- a/Samples/Samples.Bedrock/Samples.Bedrock.csproj
+++ b/Samples/Samples.Bedrock/Samples.Bedrock.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\Samples.Common\Samples.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="DataSources\Images\grassland.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
