--- a/Samples/Samples.Common/appsettings.json
+++ b/Samples/Samples.Common/appsettings.json
@@ -1,3 +1,8 @@
 {
-  "ConnectionStrings": { "KBStoreDB": "Server=###Enter your server URL or IP here###;Port=5432;Database=kbstore;User Id=###Enter your username here###;Password=###Enter DB password here###;" }
+  "ConnectionStrings": {
+    "MySampleDB": "Server=##Your Postgres writer endpoint###;Port=5432;Database=mysampledb;User Id=##Your Postgres user id###;Password=##Your Postgres password###;",
+    "MyKBStoreDB": "Server=##Your Postgres writer endpoint###;Port=5432;Database=mykbstore;User Id=##Your Postgres user id###;Password=##Your Postgres password###;"
+
+  }
 }
+
