--- a/Samples/Samples.Polly/Samples.Polly.csproj
+++ b/Samples/Samples.Polly/Samples.Polly.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.Polly" Version="3.7.301.28" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Samples.Common\Samples.Common.csproj" />
+  </ItemGroup>
+
 </Project>
